[package]
name = "dcf"
version = "0.2.2"
authors = ["myl7 <myl@myl.moe>"]
edition = "2021"
description = "Distributed comparison function implementation"
documentation = "https://docs.rs/dcf"
homepage = "https://github.com/myl7/dcf"
repository = "https://github.com/myl7/dcf.git"
license = "Apache-2.0"
keywords = ["crypto", "dpf", "fss", "dcf", "dist-comparison-fn"]
categories = ["cryptography"]

[[bench]]
name = "dcf"
harness = false
required-features = ["prg"]

[[bench]]
name = "dcf_batch_eval"
harness = false
required-features = ["prg"]

[[bench]]
name = "dcf_large_lambda"
harness = false
required-features = ["prg"]

[features]
default = ["multithread"]
prg = ["aes"]
multithread = ["rayon"]

[dependencies]
bitvec = "1.0.1"
aes = { version = "0.8.3", optional = true }
rayon = { version = "1.7.0", optional = true }
zerocopy = { version = "0.7.0-alpha.5", features = ["alloc", "simd-nightly", "derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
serde_with = "3.3.0"
serde_with_macros = "3.3.0"
bincode = "1.3"

[dev-dependencies]
rand = { version = "0.8.5", features = ["std", "std_rng"] }
criterion = "0.5.1"
